--- a/doc/制作过程.md
+++ b/doc/制作过程.md
@@ -81,7 +81,7 @@ cargo install -f cross
 * 编译 windows 客户端
   
 ```shell
-cross build --target x86_64-pc-windows-gnu
+cross build --release --target x86_64-pc-windows-gnu
 ```
 
 * 编译 linux 客户端
@@ -97,3 +97,5 @@ cd redissyncer
 cp ~/redissyncer-cli-rs/target/x86_64-pc-windows-gnu/release/redissyncer-cli-rs.exe redissyncer-cli/redissyncer-cli-rs.exe
 cp ~/redissyncer-cli-rs/target/release/redissyncer-cli-rs redissyncer-cli/redissyncer-cli-rs-x86_64-linux
 ```
+
+/Users/jiashiwen/javaprojects/redissyncer
